--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,10 +25,18 @@
             android:text="Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/button1"
+            android:layout_marginTop="20dp"
+            android:layout_below="@+id/imageView"
+            android:onClick="chooseAnswer"/>
+
+        <Button
+            android:text="Button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/button2"
-            android:layout_below="@+id/button"
-            android:layout_alignLeft="@+id/button"
-            android:layout_alignStart="@+id/button"/>
+            android:layout_below="@+id/button1"
+            android:onClick="chooseAnswer"/>
 
         <Button
             android:text="Button"
@@ -36,26 +44,16 @@
             android:layout_height="wrap_content"
             android:id="@+id/button3"
             android:layout_below="@+id/button2"
-            android:layout_alignLeft="@+id/button2"
-            android:layout_alignStart="@+id/button2"/>
+            android:onClick="chooseAnswer"/>
 
         <Button
             android:text="Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/button3"
-            android:layout_alignLeft="@+id/button3"
-            android:layout_alignStart="@+id/button3"
-            android:id="@+id/button4"/>
+            android:id="@+id/button4"
+            android:onClick="chooseAnswer"/>
 
-        <Button
-            android:text="Button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/button"
-            android:layout_marginTop="20dp"
-            android:layout_below="@+id/imageView"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"/>
+
 
 </RelativeLayout>
