--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,47 +13,60 @@
     tools:context="ainor.com.my.celebritylist.MainActivity">
 
 
-
-        <ImageView
+        <GridLayout
             android:layout_width="match_parent"
-            app:srcCompat="@drawable/celebrity"
-            android:id="@+id/imageView"
-            android:layout_height="270dp"
-            android:scaleType="fitXY"/>
+            android:layout_height="match_parent">
 
-        <Button
-            android:text="Button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/button1"
-            android:layout_marginTop="20dp"
-            android:layout_below="@+id/imageView"
-            android:onClick="chooseAnswer"/>
+                <ImageView
+                    android:layout_width="match_parent"
+                    app:srcCompat="@drawable/celebrity"
+                    android:id="@+id/imageView"
+                    android:layout_height="270dp"
+                    android:scaleType="fitXY"
+                    android:layout_row="0"
+                    android:layout_column="0"/>
 
-        <Button
-            android:text="Button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/button2"
-            android:layout_below="@+id/button1"
-            android:onClick="chooseAnswer"/>
+                <Button
+                    android:text=""
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/button1"
+                    android:layout_marginTop="20dp"
+                    android:onClick="chooseAnswer"
+                    android:layout_row="1"
+                    android:layout_column="0"
+                    android:tag="0"/>
 
-        <Button
-            android:text="Button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/button3"
-            android:layout_below="@+id/button2"
-            android:onClick="chooseAnswer"/>
+                <Button
+                    android:text=""
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/button2"
+                    android:onClick="chooseAnswer"
+                    android:layout_row="2"
+                    android:layout_column="0"
+                    android:tag="1"/>
 
-        <Button
-            android:text="Button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/button3"
-            android:id="@+id/button4"
-            android:onClick="chooseAnswer"/>
+                <Button
+                    android:text=""
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/button3"
+                    android:onClick="chooseAnswer"
+                    android:layout_row="3"
+                    android:layout_column="0"
+                    android:tag="2"/>
 
+                <Button
+                    android:text=""
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/button4"
+                    android:onClick="chooseAnswer"
+                    android:layout_row="4"
+                    android:layout_column="0"
+                    android:tag="3"/>
+        </GridLayout>
 
 
 </RelativeLayout>
